@@ -21,10 +21,10 @@ import org.eclipse.ui.IWorkbenchPart;
 /**
  * Action of inserting a column on the left of current column
  */
-public class InsertColumnRightAction extends InsertColumnAction {
+public class InsertColumnRightAction extends InsertColumnAction
+{
 
-	private static final String ACTION_MSG_COLUMN_TO_THE_RIGHT = Messages
-			.getString("InsertColumnRightAction.actionMsg.columnToRight"); //$NON-NLS-1$
+	private static final String ACTION_MSG_COLUMN_TO_THE_RIGHT = Messages.getString( "InsertColumnRightAction.actionMsg.columnToRight" ); //$NON-NLS-1$
 
 	/** action ID */
 	public static final String ID = "org.eclipse.birt.report.designer.internal.ui.editors.schematic.actions.InsertColumnRightAction"; //$NON-NLS-1$
@@ -35,10 +35,11 @@ public class InsertColumnRightAction extends InsertColumnAction {
 	 * @param part
 	 *            current work bench part
 	 */
-	public InsertColumnRightAction(IWorkbenchPart part) {
-		super(part);
-		setId(ID);
-		setText(ACTION_MSG_COLUMN_TO_THE_RIGHT);
+	public InsertColumnRightAction( IWorkbenchPart part )
+	{
+		super( part );
+		setId( ID );
+		setText( ACTION_MSG_COLUMN_TO_THE_RIGHT );
 	}
 
 	/*
@@ -46,26 +47,28 @@ public class InsertColumnRightAction extends InsertColumnAction {
 	 * 
 	 * @see org.eclipse.gef.ui.actions.WorkbenchPartAction#calculateEnabled()
 	 */
-	protected boolean calculateEnabled() {
-		return super.calculateEnabled();
+	protected boolean calculateEnabled( )
+	{
+		return super.calculateEnabled( );
 	}
 
 	/**
 	 * Runs action.
 	 * 
 	 */
-	public void run() {
-		CommandUtils.setVariable(
-				ICommandParameterNameContants.INSERT_COLUMN_POSITION,
-				new Integer(1));
+	public void run( )
+	{
+		CommandUtils.setVariable( ICommandParameterNameContants.INSERT_COLUMN_POSITION,
+				Integer.valueOf( 1 ) );
 
-		try {
-			CommandUtils
-					.executeCommand(
-							"org.eclipse.birt.report.designer.ui.command.insertColumnCommand", //$NON-NLS-1$
-							null);
-		} catch (Exception e) {
-			logger.log( Level.SEVERE, e.getMessage( ),e );
+		try
+		{
+			CommandUtils.executeCommand( "org.eclipse.birt.report.designer.ui.command.insertColumnCommand", //$NON-NLS-1$
+					null );
+		}
+		catch ( Exception e )
+		{
+			logger.log( Level.SEVERE, e.getMessage( ), e );
 		}
 	}
 }
